doc: javadocの修正 不要なコメントの削除